--- a/ConversorMoneda/app/src/main/res/values/strings.xml
+++ b/ConversorMoneda/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Conversor Moneda</string>
+    <string name="autor">Jose Alfredo Arias.</string>
+    <string name="conversor.calcular">Calcular</string>
+    <string name="conversor.resultado">0.0 BOB</string>
 </resources>
