--- a/QuakeRadar/app/src/main/res/values/strings.xml
+++ b/QuakeRadar/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">QuakeRadar</string>
     <string name="action_settings">Settings</string>
+    <string name="last_hour">Ultima Hora</string>
+    <string name="last_day">Ultima Día</string>
+    <string name="last_week">Ultima Semana</string>
+    <string name="last_month">Ultima Mes</string>
 </resources>
