--- a/QuakeRadar/app/src/main/res/values/strings.xml
+++ b/QuakeRadar/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="last_day">Ultima Día</string>
     <string name="last_week">Ultima Semana</string>
     <string name="last_month">Ultima Mes</string>
+    <string name="title_activity_maps">Map</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
